feat: add draft ISF v0.4 output
